--- a/L-systems/webapp/index.html
+++ b/L-systems/webapp/index.html
@@ -3,25 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS LEVEL: 2</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <div id="navbar">
-            <a href="#" id="logo">amazon.in</a>
-            <a href="#" >Account</a>
-            <a href="#" >My Cart</a>
-            <a href="#" >Contact Us</a>
-                <input type="Search">
-                <button>Search</button>
-        </div>
+        <h1>L-SYSTEMS</h1>
     </header>
-    <div id="content">
-        <div class="content-box">content1</div>
-        <div class="content-box">comtent2</div>
-        <div class="content-box">content3</div>
-    </div>
-    <footer> &#169; 2025 copyright of Amazon</footer>
+    <a class="Photo-selections">Plant1</a>
+    <a class="Photo-selections">Plant2</a>
+</br>
+    <a class="Photo-selections">Plant3</a>
+    <a class="Photo-selections">Plant4</a>
 </body>
 </html>
